фикс замечаний по архитектуре + рабочая корзина

--- a/src/common.blocks/modal.scss
+++ b/src/common.blocks/modal.scss
@@ -3,14 +3,17 @@
 
 .modal {
   @include mixins.sublayer;
+  box-sizing: border-box;
   height: max-content;
-  position: absolute;
+  position: fixed;
   display: none;
   justify-content: center;
   background-color: $overlayBackground;
   z-index: 100;
   padding-top: 5vh;
   padding-bottom: 5vh;
+  height: 100dvh;
+  align-items: start;
 
   &_active {
     display: flex;
@@ -21,7 +24,7 @@
     @include mixins.flex(column);
     gap: $defaultPadding;
     background-color: $background;
-    min-height: 90vmin;
+    // min-height: 90vmin;
     border-radius: 3rem;
     box-sizing: border-box;
     position: relative;
