реализован весь рабочий функионал

--- a/src/common.blocks/form.scss
+++ b/src/common.blocks/form.scss
@@ -25,7 +25,7 @@
       outline-style: solid;
     }
 
-    &:invalid {
+    &[data-touched]:invalid {
       border-color: $error;
       outline-color: $error;
     }
